editing css (part 2)

--- a/P5.html
+++ b/P5.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Survey Form</h1>
-    <p id="description">Let me know how I can improve this survey form</p>
+    <p id="description">~ Let me know how I can improve this survey form ~</p>
     <form action="action_page.php" id="survey-form">
         <label id="name-label">* Name: </label>
         <input type="text" id="name" placeholder="Enter Your First and Last Name" required><br>
